<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grad1"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40dp"
                android:background="@drawable/circle_border">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/pp"
                    android:background="@drawable/user_profile_image_background"
                    android:elevation="4dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_editprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_25dp"
                android:layout_below="@id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="330dp"
                android:layout_height="450dp"
                android:layout_below="@id/tv_editprofile"
                android:layout_marginStart="40dp"
                app:cardCornerRadius="@dimen/_10dp"
                android:layout_marginTop="@dimen/_15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_18dp"
                        android:id="@+id/username"
                        android:textStyle="bold"
                        android:text="@string/user"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginTop="@dimen/_20dp"/>


                    <TextView
                        android:id="@+id/tv_username_profile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45dp"
                        android:drawableStart="@drawable/ic__person"
                        android:drawablePadding="@dimen/_15dp"
                        android:layout_below="@id/username"
                        android:hint="@string/username"
                        android:textSize="@dimen/_18dp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_10dp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_30dp"
                        android:layout_marginRight="@dimen/_30dp" />

                    <View
                        android:layout_width="@dimen/_270dp"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/tv_username_profile"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginEnd="@dimen/_5dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_18dp"
                        android:id="@+id/upemail"
                        android:textStyle="bold"
                        android:layout_below="@id/tv_username_profile"
                        android:text="@string/upemail"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginTop="@dimen/_30dp"/>

                    <TextView
                        android:id="@+id/tv_email_profile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45dp"
                        android:drawableStart="@drawable/ic__email"
                        android:drawablePadding="@dimen/_15dp"
                        android:hint="john.cristian@gmail.com"
                        android:textSize="@dimen/_18dp"
                        android:layout_gravity="center"
                        android:layout_below="@id/upemail"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_30dp"
                        android:layout_marginRight="@dimen/_30dp" />


                    <View
                        android:id="@+id/view2"
                        android:layout_width="@dimen/_270dp"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/tv_email_profile"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginEnd="@dimen/_5dp"
                        android:background="@android:color/black" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_18dp"
                        android:id="@+id/upphone"
                        android:textStyle="bold"
                        android:layout_below="@id/view2"
                        android:text="@string/upphone"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginTop="@dimen/_30dp"/>

                    <TextView
                        android:id="@+id/tv_phone_profile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45dp"
                        android:drawableStart="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="@dimen/_15dp"
                        android:hint="082112339527"
                        android:textSize="@dimen/_18dp"
                        android:layout_gravity="center"
                        android:layout_below="@id/upphone"
                        android:layout_marginTop="@dimen/_10dp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_30dp"
                        android:layout_marginRight="@dimen/_30dp" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="@dimen/_270dp"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/tv_phone_profile"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginEnd="@dimen/_5dp"
                        android:background="@android:color/black" />


                    <Button
                        android:layout_width="@dimen/_270dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:background="@color/design_default_color_primary_dark"
                        android:layout_below="@id/view3"
                        android:text="Sign Out"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_30dp"
                        android:layout_marginBottom="@dimen/_15dp"
                        android:layout_marginTop="@dimen/_30dp"/>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>